<resources>
    <string name="app_name">Student Marks Calculater</string>
    <string name="login">LOGIN</string>
    <string name="Eamil">Enter Your Email</string>
    <string name="password">Enter Your Password</string>
    <string name="loginbtn">Login Now</string>
    <string name="Appname">Student Marks Calculater</string>
    <string name="tvStudent">Student Name</string>
    <string name="hStudent">Enter Student Name</string>
    <string name="tv1">Mathematics</string>
    <string name="tv2">Science</string>
    <string name="title">Enter Marks</string>
    <string name="cal">Calculate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>